# context-aware-copilot-toolkit

./: README.md  config.yaml  main.py  pyproject.toml
src/context_aware_copilot_toolkit/: __init__.py  reviewer.py
tests/: test_reviewer.py
